--- a/src/assets/scss/pages/_common.scss
+++ b/src/assets/scss/pages/_common.scss
@@ -120,7 +120,7 @@
 
     .project-tag {
       background-color: rgba($lightBlue, 0.4);
-      color: $lightBlue;
+      color: lighten(#808dad, 16%);
       font-weight: bold;
       font-size: 0.9rem;
       padding: 0.2rem 0.4rem;
